# vectordb

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: fastapi-python-cursor-rules.mdc  project-strcuture.mdc
tests/: test_api.py  test_libraries_api.py  test_library_chunks_api.py  test_models.py
vector_db_api/domain/models/: chunk.py  document.py  library.py
vector_db_api/infrastructure/repo/: in_memory_repository.py  interfaces.py
vector_db_api/interface/: main.py
vector_db_api/interface/api/: chunks.py  documents.py  health.py  libraries.py  search.py
