[tool.poetry]
name = "stakeai"
version = "0.1.0"
description = "StakeAI Vector Database API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "vector_db_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
pydantic = "^2.0.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function" 
